[package]
name = "forgot"
version = "0.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.6", features = ["derive"] }
crossterm = "0.25.0"
enum_dispatch = "0.3.8"
rand = "0.8.5"
regex = "1.6.0"
tui = "0.19.0"
